unpackaged/main/default/objects/srlg_Provider__c/fields/CM_Location__c.field-meta.xml
<CustomField>
    <fullName>CM_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CM Location</label>
    <referenceTo>CM_Location__c</referenceTo>
    <relationshipLabel>Providers</relationshipLabel>
    <relationshipName>Providers</relationshipName>
    <type>Lookup</type>
</CustomField>