unpackaged/main/default/objects/srlg_Provider__c/fields/National_Provider_Identifier_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Provider_Identifier_Number__c</fullName>
    <description>Field to collect National Provider Identifier Number.</description>
    <inlineHelpText>Field to collect National Provider Identifier Number.</inlineHelpText>
    <label>National Provider Identifier Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>